colors finished levels, settings, informations, graphics

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -31,7 +31,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:padding="10dp"
-        android:background="@color/windowOff"
+        android:background="@color/building"
         android:id="@+id/pauseMenu"
         android:visibility="invisible">
 
@@ -72,7 +72,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:padding="30dp"
-        android:background="@color/windowOff"
+        android:background="@color/building"
         android:id="@+id/finishGame"
         android:visibility="invisible">
         <TextView
