--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -70,7 +70,8 @@
                 android:layout_marginRight="30dp"
                 android:background="@color/building">
                 <Button
-                    android:text="Reset"
+                    android:text="@string/reset"
+                    android:background="@color/buildingDark"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/reset"
