--- a/app/src/main/res/layout/fragment_informations.xml
+++ b/app/src/main/res/layout/fragment_informations.xml
@@ -104,7 +104,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView6"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textAlignment="center" />
                 <LinearLayout
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
