--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="sillSilver">#FFE28A</color>
     <color name="sillGold">#6FCB9F</color>
 
-    <color name="textPause">#141414</color>
+    <color name="textPause">#8f9599</color>
 
     <color name="wire">#ecf0f1</color>
     <color name="wireActivated">#e74c3c</color>
