--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -71,14 +71,59 @@
                 android:layout_marginRight="30dp"
                 android:background="@color/building">
 
+                <TextView
+                    android:text="@string/upToDate"
+                    android:textSize="17sp"
+                    android:textColor="@color/windowOff"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/infos"
+                    android:layout_marginBottom="20dp"
+                    android:layout_weight="1"
+                    android:textAlignment="center" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp">
+
+                    <TextView
+                        android:text="@string/orientation"
+                        android:textSize="17sp"
+                        android:textColor="@color/windowOff"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView3"
+                        android:layout_weight="1" />
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginRight="10dp"
+                        app:srcCompat="@drawable/portrait"
+                        android:id="@+id/orientation"
+                        android:layout_alignParentRight="true" />
+
+                </LinearLayout>
+                <Switch
+                    android:text="@string/music"
+                    android:textSize="17sp"
+                    android:textColor="@color/windowOff"
+                    android:layout_marginBottom="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/music"
+                    android:layout_weight="1" />
+
                 <Switch
                     android:text="@string/soundEffects"
                     android:textSize="17sp"
                     android:textColor="@color/windowOff"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/switch1"
+                    android:id="@+id/soundeffect"
                     android:layout_weight="1" />
 
                 <Button
