Levels, bug fix not position, styling win panel

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -31,7 +31,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:padding="10dp"
-        android:background="@color/building"
+        android:background="@color/winPanel"
         android:id="@+id/pauseMenu"
         android:visibility="invisible">
 
@@ -72,11 +72,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:padding="30dp"
-        android:background="@color/building"
+        android:padding="10dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/winPanel"
         android:id="@+id/finishGame"
         android:visibility="invisible">
         <TextView
