--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="building">#bdc3c7</color>
     <color name="buildingDark">#8f9599</color>
+    <color name="winPanel">#99000000</color>
 
     <color name="windowOn">#f39c12</color>
     <color name="windowTextOn">#f1c40f</color>
