--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -159,6 +159,7 @@
             <ImageView
                 android:layout_weight="0.3"
                 android:layout_width="0dp"
+                android:visibility="visible"
                 app:srcCompat="@drawable/play"
                 android:layout_height="50dp"
                 android:id="@+id/continuer" />
